syntax = "proto3";

package grpc_test; 

import "generated/types.proto";


option go_package="./grpc_test";



// Define service for CRUD operations
service DummyService {
  // Create operation
  rpc CreateObject(grpc_test.DummyType) returns (grpc_test.DummyType) {}

  // Read operation
  rpc ReadObjectById (ReadDummyRequest) returns (grpc_test.DummyType) {}
  
  // Update operation
  rpc UpdateObject(grpc_test.DummyType) returns (grpc_test.DummyType) {}
  
  // Delete operation
  rpc DeleteObject(DeleteDummyRequest) returns (grpc_test.DummyType) {}

  // Read a list of objects in a stream
  rpc ListObjects(ListDummiesRequest) returns (stream grpc_test.DummyType) {}
}

// Define request message for reading an object by ID
message ReadDummyRequest {
  string id = 1;
}

// Define request message for deleting an object by ID
message DeleteDummyRequest {
  string id = 1;
}

// Define request message for listing objects
message ListDummiesRequest {
  int32 start = 1;
  int32 limit = 2;
}
